About page Changed

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,7 @@
     <body>
         <div class="main-content">
         {{>header}}
-        <p>Created by : {{name}}</p>
+        <p>Thisn site is created by : {{name}}, it uses data from mapbox and forecast. </p>
         <img class='portrait' src="/img/DSC_0924.jpg">
         </div>
         {{>footer}}
