--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,7 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p>use this app for weather</p>
+            <p>Use this app for weather</p>
 
             <form>
                 <input placeholder="Location">
